# db-claw

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  biome.json  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  release-binaries.yml  semsql-doctor.yml  sheets-demo-pages.yml
crates/semsql-cli/: Cargo.toml
crates/semsql-cli/src/: extract.rs  main.rs  resolve.rs
crates/semsql-core/: Cargo.toml  build.rs
crates/semsql-core/src/: error.rs  ids.rs  lib.rs
crates/semsql-extract-db/: Cargo.toml
crates/semsql-extract-db/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
crates/semsql-ffi/: Cargo.toml
crates/semsql-ffi/src/: lib.rs
crates/semsql-graph/: Cargo.toml
crates/semsql-graph/src/: lib.rs  read.rs  write.rs
crates/semsql-intent/: Cargo.toml
crates/semsql-intent/src/: lib.rs
crates/semsql-natsql/: Cargo.toml
crates/semsql-natsql/src/: ast.rs  lib.rs  transpile.rs
crates/semsql-renderer/: Cargo.toml
crates/semsql-renderer/src/: lib.rs
crates/semsql-renderer/tests/: differential.rs
crates/semsql-runtime/: Cargo.toml
crates/semsql-runtime/benches/: stage2_latency.rs
crates/semsql-runtime/src/: context.rs  grammar.rs  lib.rs  manifest.rs  normalize.rs  onnx.rs  stage_linker.rs  stage_pre_resolver.rs  stage_skeleton.rs  stage_slotfiller.rs  tokenizer_bridge.rs
crates/semsql-runtime/tests/: end_to_end.rs  grammar_fuzz.rs
crates/semsql-runtime/tests/fixtures/: schema_v1.sql  seed.sql
crates/semsql-second-pass/: Cargo.toml
crates/semsql-second-pass/src/: lib.rs
crates/semsql-second-pass/tests/: two_parser_corpus.rs
crates/semsql-second-pass/tests/fixtures/: two_parser_corpus.jsonl
docs/: ARCHITECTURE.md  COMPARISONS.md  CONTRIBUTING.md  GO_LIVE.md  README.md  completion-plan.md  stage2.md  training-on-laptop-v2.md  training-on-laptop.md
docs/results/: README.md  phase-d-gpu-handoff.md  v02-app-context-first-direction-v1.md  v02-approach-comparison-and-path.md  v02-atlas-backed-route-promotion-v1.md  v02-attribute-superlative-slice.md  v02-bird-failure-root-cause-cleaned.md  v02-bird-first100-after-focused13.md  v02-bird-semantic-atlas-direction-v1.md  v02-bird100-onnx-diagnostic-v1.md  v02-bird50-benchmark-atlas-desc-v1.md  v02-bird50-benchmark-atlas-v2.md  v02-bird50-benchmark-atlas-v6.md  v02-boundqueryplan-issue3-audit-v1.md  v02-business-analytics-suite-semsql-baseline-v1.md  v02-business-analytics-suite-semsql-state-machine-v2.md  v02-business-analytics-suite-v1.md  v02-cleaned-runtime-rerun.md  v02-currency-identity-slice.md  v02-current-status.md  v02-evidence-ledger.md  v02-expectation-ladder.md  v02-focused13-full-recovery-slice.md  (+158 more)
intent-library/: README.md  patterns.yaml
notebooks/: phase_d_colab.ipynb  phase_d_kaggle.ipynb
python/semsql_eval/: conftest.py  pyproject.toml
python/semsql_eval/src/semsql_eval/: __init__.py  __main__.py  ablation_gap.py  binder_probe.py  cascade_runner.py  datasets.py  exec_acc.py  fixtures.py  framework_bridge_probe.py  laravel_alpha_probe.py  llm_resolution.py  oracle_gap.py  package_bridge_probe.py  package_dlx_smoke.py  package_launcher_smoke.py  package_public_smoke.py  package_registry_smoke.py  pathway_benchmark.py  per_stage.py  platform_suite.py  production_readiness.py  queryframe_canary.py  queryframe_probe.py  real_app_framework_probe.py  realdb_schema_probe.py  report_diagnostics.py  semantic_atlas_assessment.py  sharding_audit.py  spider.py
python/semsql_eval/tests/: test_ablation_gap.py  test_cascade_runner.py  test_cli.py  test_datasets.py  test_exec_acc.py  test_fixtures.py  test_laravel_alpha_probe.py  test_llm_resolution.py  test_oracle_gap.py  test_package_dlx_smoke.py  test_package_launcher_smoke.py  test_package_public_smoke.py  test_package_registry_smoke.py  test_pathway_benchmark.py  test_per_stage.py  test_platform_suite.py  test_prepare_release_versions_script.py  test_production_readiness.py  test_publish_npm_release_script.py  test_queryframe_canary.py  test_queryframe_probe.py  test_real_app_framework_probe.py  test_realdb_schema_probe.py  test_rehearse_release_packages_script.py  test_release_package_script.py  test_release_version_script.py  test_report_diagnostics.py  test_semantic_atlas_assessment.py  test_sharding_audit.py  test_spider.py  test_spider_cli_options.py  test_static_shortcut_audit_script.py  test_trace_only.py
python/semsql_py/: pyproject.toml
python/semsql_py/src/semsql/: __init__.py
python/semsql_rewriter/: README.md  conftest.py  pyproject.toml
python/semsql_rewriter/src/semsql_rewriter/: __init__.py  graph_reader.py  injector.py  sanitiser.py  validator.py
python/semsql_rewriter/tests/: test_graph_reader.py  test_injector.py  test_injector_bypass.py  test_sanitiser.py  test_two_parser_corpus.py  test_validator.py
python/semsql_train/: conftest.py  pyproject.toml
python/semsql_train/src/semsql_train/: __init__.py  __main__.py  active_subset.py  corpus_audit.py  generators.py  generators_linker_v3.py  generators_slot_v3.py  generators_targeted_v3.py  onnx_export.py  paraphrase.py  runtime_slot_pairs.py  spider_linker.py  stage_eval.py  teacher_cache.py  templates.py
python/semsql_train/src/semsql_train/trainers/: __init__.py  distill.py  linker.py  skeleton.py  slot_filler.py
python/semsql_train/tests/: test_active_subset.py  test_corpus_audit.py  test_distill.py  test_generators.py  test_generators_slot_v3.py  test_onnx_export.py  test_paraphrase.py  test_runtime_slot_pairs.py  test_spider_linker.py  test_stage_eval.py  test_teacher_cache.py  test_templates.py  test_trainer_linker.py  test_trainer_skeleton.py  test_trainer_slot_filler.py
python/semsql_train/tests/fixtures/: make_graph.py
schemas/: natsql.bnf  semantic_graph.proto  training_pair.proto
scripts/: audit_static_query_shortcuts.py  audit_v02_artifacts.py  check_docs_hygiene.py  check_git_artifacts.py  check_npm_release_packages.py  check_release_versions.py  generate_semsql_downloads_manifest.py  prepare_release_versions.py  publish_npm_release_packages.py  rehearse_release_packages.py
