[project]
name = "semsql-monorepo"
version = "0.1.0.dev0"
description = "SemanticSQL — open-source NL→SQL with cascade architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "DB Claw contributors" }]

dependencies = [
    "sqlglot>=25.0",
    "pydantic>=2.7",
    "protobuf>=5.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "datasets>=3.0",
    "optimum[onnxruntime]>=1.23",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "accelerate>=1.0",
]
eval = [
    "duckdb>=1.1",
    "sqlglot>=25.0",
    "pandas>=2.2",
]
db = [
    "pymysql>=1.1",
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML",
    "types-protobuf",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["python/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]
ignore = [
    "B007",
    "E501",
    "E741",
    "F402",
    "N803",
    "N806",
    "N812",
    "N818",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "S101",
    "S311",
    "S324",
    "S603",
    "S608",
    "UP028",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = """(?x)(
    (^|/)conftest\\.py$
    | ^python/semsql_train/
    | ^python/semsql_rewriter/
    | ^python/.*/tests/
)"""

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q --strict-markers"
filterwarnings = ["error"]
