[package]
name = "semsql-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "`semsql` — command-line driver for SemanticSQL."

[[bin]]
name = "semsql"
path = "src/main.rs"

[features]
default = ["postgres", "mysql"]
# Re-export the underlying extract-db backend toggle so users can opt out
# of Postgres at the CLI level (smaller binary, fewer transitive deps).
postgres = ["semsql-extract-db/postgres"]
# Re-export the MySQL / MariaDB DB-only extractor toggle.
mysql = ["semsql-extract-db/mysql"]
# Pass-through to enable Stage 1/3 ONNX inference in the cascade. With
# this feature off, `--cascade-manifest` is silently ignored at query
# time and `semsql doctor` warns when the manifest is supplied. Pulls
# in onnxruntime + tokenizers + llguidance via semsql-runtime.
onnx = ["semsql-runtime/onnx"]

[dependencies]
semsql-core       = { path = "../semsql-core" }
semsql-graph      = { path = "../semsql-graph" }
semsql-intent     = { path = "../semsql-intent" }
semsql-extract-db = { path = "../semsql-extract-db", default-features = false }
semsql-runtime    = { path = "../semsql-runtime" }
semsql-natsql     = { path = "../semsql-natsql" }
semsql-renderer   = { path = "../semsql-renderer" }
clap.workspace    = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
csv.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
