[package]
name = "semsql-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite-backed SemanticGraph store + query API."

[dependencies]
semsql-core = { path = "../semsql-core" }
prost.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
indexmap = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile = "3"
