[package]
name = "semsql-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cascade orchestrator — Stage 0a → 0b → 1 → 2 → 3 → 4 with ONNX + llguidance."

[features]
default = []
# Gate ONNX inference (Stage 1 / Stage 3 cross-encoder) behind a feature
# flag. The default build is dependency-light: cascade falls back to
# `NeedsModel` for queries the deterministic stages can't pin. Enabling
# `onnx` pulls in `ort` (load-dynamic), `tokenizers`, and `ort-sys`
# (pinned to keep ABI in lockstep with `ort` rc.4). The caller installs
# ONNX Runtime themselves and points at it via `ORT_DYLIB_PATH` — see
# the workspace `Cargo.toml` for the install pointers.
onnx = ["dep:ort", "dep:ort-sys", "dep:tokenizers", "dep:llguidance"]

[dependencies]
semsql-core    = { path = "../semsql-core" }
semsql-graph   = { path = "../semsql-graph" }
semsql-intent  = { path = "../semsql-intent" }
semsql-natsql  = { path = "../semsql-natsql" }
semsql-renderer = { path = "../semsql-renderer" }
ort        = { workspace = true, optional = true }
ort-sys    = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
llguidance = { workspace = true, optional = true }
tokio.workspace      = true
async-trait.workspace = true
serde.workspace      = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
ahash.workspace      = true
unicode-normalization.workspace = true

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "stage2_latency"
harness = false
