[project]
name = "semsql-eval"
version = "0.1.0.dev0"
description = "Spider 1.0 / 2.0 + BIRD + per-stage + adversarial eval harness for SemanticSQL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "DB Claw contributors" }]

dependencies = [
    "pydantic>=2.7",
    "click>=8.1",
    "rich>=13.7",
    "duckdb>=1.1",
    "sqlglot>=25.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semsql_eval"]
