[project]
name = "semsql"
version = "0.1.0.dev0"
description = "Python SDK for SemanticSQL — thin wrapper over semsql-ffi."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "DB Claw contributors" }]

dependencies = [
    "pydantic>=2.7",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semsql"]
